--- a/Github_API/style.css
+++ b/Github_API/style.css
@@ -8,7 +8,7 @@
 html, body {
    height: 100vh;
    width: 100%;
-   background-color: #1D1D1E;
+   background-color: #5b5baf;
    color: white;
    display: flex;
    justify-content: center;
@@ -20,7 +20,7 @@ main{
     min-width: 350px;
     max-width: 1440px;
     border-radius: 20px;
-    background-color: #2B2A2A;
+    background-color: #3877d6;
     padding: 1.5rem;
     margin: 0px 20px;
 }
@@ -32,7 +32,7 @@ input{
     border: none;
     font-size: 1rem;
     &:focus{
-        outline-color: rgb(110, 110, 110);
+        outline-color: rgb(29, 133, 164);
     }
 }
 button{
@@ -64,8 +64,11 @@ button{
     grid-area: 1/1;
     padding: .5rem;
     display: flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1.5rem;
 }
+
 .slide2{
     width: 100%;
     min-width: 320px;
@@ -85,8 +88,24 @@ button{
     object-fit: cover;
     object-position: top;
     border-radius: 20%;
-    box-shadow: 0px 0px 25px 3px rgb(0, 0, 0);
+    box-shadow: 0px 0px 25px 2px rgb(92, 172, 219);
 }
+i{
+    background-color: #3877d6;
+    padding: .5rem;
+    font-size: 1.3rem;
+    border-radius: 30%;
+    box-shadow: 0px 0px 25px 1px rgba(92, 172, 219, 0.518);
+    cursor: pointer;
+    color: white;
+    &:hover{
+        font-size: 1.5rem;
+    }
+    
+}
+a:link{
+        text-decoration: none;
+    }
 p{
     margin-top: .5rem;
     min-width: 272px;
@@ -96,6 +115,7 @@ p{
    margin-top: .5rem;
 }
 #cardImg{
+    margin-top: 1rem;
     width: 400px;
     min-width: 420px;
  }
@@ -105,7 +125,6 @@ p{
         align-items: normal;
     }
     main{
-        justify-content: center;
         align-items: center;
         display: flex;
         margin: 10px 20px 0px 20px;
@@ -121,6 +140,7 @@ p{
         width: 300px;
     }
     .slide2{
+        margin-top: 1rem;
         grid-area: 2/1;
         width: 300px;
         padding: 0px 0px 0px 10px;
